Harden submissions and add admin mapping sync manager
Entire-Checkpoint: 89df1838cb94

--- a/app/globals.css
+++ b/app/globals.css
@@ -1083,6 +1083,14 @@ body {
 
 .number-input {
   width: 100px;
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
+
+.number-input::-webkit-outer-spin-button,
+.number-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .inline-fields {
